@@ -5,6 +5,7 @@ trackstop
     :summary: Add dynamic configuration options for track stops.
     :tags: fort buildings interface
 
-This script provides 2 overlays that are managed by the `overlay` framework. The script does nothing when executed.
+This script provides 3 overlays that are managed by the `overlay` framework. The script does nothing when executed.
 The trackstop overlay allows the player to change the friction and dump direction of a selected track stop after it has been constructed.
 The rollers overlay allows the player to change the roller direction and speed of a selected roller after it has been constructed.
+The reorderstops overlay allows the player to change the order of stops in a hauling route.
